--- a/css/main.css
+++ b/css/main.css
@@ -31,7 +31,7 @@
 
     section#main{
       border-style: solid;
-      border-width: 1px;
+      border-width: 2px;
       opacity: 0.8;
       margin: 80px 200px;
       padding: 20px;
@@ -51,7 +51,7 @@
       text-align: left;
       font-size:0.9em;
       font-family: 'Karla', Helvetica, sans-serif;
-      opacity: 0.8;
+      opacity: 0.7;
      }
 
     section#about p{
@@ -123,6 +123,149 @@ a#navLogo h1{
 /*----media query---*/
 
 
+/*  //PROJECT PAGE// */
+ div#project_wrapper{
+    position: relative;
+    font-family: 'Gotham', Helvetica, san-serif;
+  }
+    header{
+      padding-top: 60px;
+      position: fixed;
+      top: 0;
+      text-align: center;
+      width: 100%;
+      min-height: auto;
+      margin: 0 auto;
+      overflow:hidden;
+      z-index:-1;
+      background: blue;
+      align-items: center;
+        justify-content: center;
+        vertical-align: middle;
+    }
+      header img{
+        max-width: 100%;
+        height: auto;
+        overflow: hidden;
+      
+        width: auto\9;
+        background: url(../img/fastfood_01.gif) center 70px no-repeat fixed; }
+
+      header .header_container{
+        min-width: 100%;
+      }
+
+    section#work_content{
+      width: 100%;
+      padding: 50px 5%;
+      margin: 0 auto;
+      margin-top: 40vw;
+
+      display: flex;
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: -webkit-flex;
+
+      background: linear-gradient(to bottom right, #E6E6E6, #B3B3B3);
+
+      -webkit-box-shadow: 2px -21px 38px -1px rgba(0,0,0,0.45);
+      -moz-box-shadow: 2px -21px 38px -1px rgba(0,0,0,0.45);
+      box-shadow: 2px -21px 38px -1px rgba(0,0,0,0.45);
+    }
+
+      article#work_details{
+        color: black;
+        width: 35%;
+        padding-right: 2%;
+      }
+        article#work_details h2{
+          font-size: 3.2vw;
+      }
+        article#work_details h3{
+          font-size: 2vw;
+          font-weight: 100;
+        }
+        article#work_details div.toolbox{
+          width: 100%;
+          padding: 10px 0;
+        }
+          div.toolbox h4{
+            display: inline-table;
+            padding: 4px;
+            border: 1px solid black;
+            margin: 5px 0;
+            font-size: 1.2vw;
+          }
+
+        article#work_details p{
+          font-size: 14px;
+          margin-top: 20px;
+        }
+      article#work_imgs{
+        width: 65%;
+        padding-left: 2%;
+      }
+        article#work_imgs img{
+          width: 900px;
+          max-width: 100%;
+          display: block;
+          border: #676767 solid 3px;
+          margin-bottom: 40px;
+        }
+        article#work_imgs .video_container{
+          max-width: 100%;
+          display: block;
+          margin-bottom: 40px;
+          position: relative;
+            padding-bottom: 56.25%;
+            height: 0;
+            overflow: hidden;
+        }
+          .video_container iframe{
+            position: absolute;
+              top: 0;
+              left: 0;
+              width: 100%;
+              height: 100%;
+          }
+
+
+    footer.project_footer{
+      background: #4D4D4D;
+      width: 100%;
+      padding: 10px 0;
+      text-align: center;
+    }
+      footer.project_footer a:link{
+        color: black;
+        text-decoration: none;
+        font-size: 15px;
+        font-weight: 300;
+        opacity: 0.4;
+      }
+      footer.project_footer a:visited{ color: black;}
+        footer.project_footer a:after{
+             margin-left: 10px;
+             font-family: 'icomoon';
+             content:' \e600';
+             transition:ALL 0.5s;
+        }
+        footer.project_footer a:hover:after{
+          margin-left: 20px;
+        }
+
+
+  footer#main_footer  {
+    font-family: "Gotham", Helvetica, sans-serif;
+    text-align: center;
+    font-size: 12px;
+    background: black;
+    color: #4D4D4D;
+    width: 100%;
+  }
+    footer#main_footer p{
+      padding: 10px 0;
+    }
 
 
 
