--- a/css/main.css
+++ b/css/main.css
@@ -151,15 +151,15 @@ header{
       
         width: auto\9;
         background: url(../img/fastfood_01.gif) center 70px no-repeat fixed; }*/
-/*
+
       header .header_container{
         min-width: 100%;
-      }*/
+      }
 
     section#work_content{
-      width: 70%;
-      padding: 100px 15%;
-      margin: 10 auto;
+      width: 100%;
+      padding: 100px 5%;
+      margin: 0 auto;
       margin-top: 0vw;
 
       display: flex;
@@ -176,40 +176,41 @@ header{
 
       article#work_details{
         color: black;
-        width: 50%;
-        padding-right: 10%;
+        width: 43%;
+        padding-left: 8%;
       }
         article#work_details h2{
-          font-size: 3.2vw;
+          font-size: 2.7vw;
       }
         article#work_details h3{
-          font-size: 2.3vw;
+          font-size: 1.3vw;
           font-weight: 100;
         }
-        article#work_details div.toolbox{
+        article#work_details div.tool-list{
           width: 80%;
           padding: 10px 0;
         }
-          div.toolbox h4{
-            display: inline-table;
-            padding: 4px;
-          /*  border: px solid black;*/
-            margin: 10px 0;
-            font-size: 1.2vw;
-          }
-
+       
         article#work_details p{
           font-size: 14px;
           margin-top: 20px;
         }
+           div.tool-list h4{
+            display: inline-table;
+            padding: 4px;
+           border: px solid black;
+            margin: 10px 0;
+            font-size: 1.2vw;
+          }
+
       article#work_imgs{
-        width: 65%;
-        padding-left: 2%;
+        width: 70%;
+        padding-left: 5%;
       }
         article#work_imgs img{
           width: 600px;
           max-width: 100%;
-          display: block;
+          display: inline-block;
          /* border: #676767 solid px;*/
           margin-bottom: 40px;
         }
@@ -232,8 +233,8 @@ header{
 
 
     footer.project_footer{
-      background: #4D4D4D;
-      width: 100%;
+      background: black;
+      width: 50%;
       padding: 10px 0;
       text-align: center;
     }
@@ -355,14 +356,14 @@ header{
 
     footer#main_footer {
       width: 100%;
-      padding: 20px 0;
+      padding: 30px 0;
 
     }
       footer#main_footer p{
               font-family: "source code pro", Helvetica, sans-serif;
               text-align: center;
               text-transform: uppercase;
-              font-size: 1 em;
+              font-size: 2 em;
               color: white;
               padding: 10px 0;
       }
