--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
   @font-face{ font-family:
-    'Source Code Pro', 'Karla', 'lato'sans-serif,'FontAwesome';
+   'Source Code Pro', 'Karla', 'lato', 'FontAwesome' sans-serif;
     src: url('../fonts/fontawesome-webfont.eot?v=4.2.0');
     src: url('../fonts/fontawesome-webfont.eot?#iefix&v=4.2.0') format('embedded-opentype'),
      url('../fonts/fontawesome-webfont.woff?v=4.2.0') format('woff'), 
@@ -11,7 +11,7 @@
     padding: 0;
     margin: 0;
   }
-  *，
+  *
   *:before,
   *:after {
     box-sizing: inherit;
@@ -20,7 +20,6 @@
     background: linear-gradient(to bottom right, #D6E8F2, white);
     background: -moz-linear-gradient:(to bottom right, #D6E8F2, #FFCCCC);
     font-size: 100%;
-
   }
 
   div#container{
@@ -71,7 +70,6 @@
     nav#main_nav ul#nav_list{
       display: flex;
       display: -webkit-box;
-      display: -ms-flexbox;      /* TWEENER - IE 10 */
       display: -webkit-flex;
       flex-flow: row wrap;
       -webkit-flex-direction: row;
@@ -88,7 +86,7 @@
         text-align:center;
       }
 
-a#navLogo h1{
+      a#navLogo h1{
           max-width: 40%;
           width: 40;
           height: 60px;
@@ -117,7 +115,7 @@ a#navLogo h1{
           nav#main_nav ul#nav_list li.link a:hover{
             color: white!important;
           }
-          /*--------- nav done ------*/
+/*--------- nav done ------*/
 
 
 
@@ -127,8 +125,9 @@ a#navLogo h1{
 /*  //PROJECT PAGE// */
  div#project_wrapper{
     position: relative;
-    font-family: 'Lato', Helvetica, sans-serif;
+    font-family: "karla" ,Helvetica, sans-serif;
   }
+
 header{
       padding-top: -100px;
       position: absolute;
@@ -141,16 +140,10 @@ header{
       z-index:-9999;
       background: blue;
       align-items: center;
-        justify-content: center;
-        vertical-align: middle;
+      justify-content: center;
+      vertical-align: middle;
     }
-     /* header img{
-        max-width: 100%;
-        height: auto;
-        overflow: hidden;
-      
-        width: auto\9;
-        background: url(../img/fastfood_01.gif) center 70px no-repeat fixed; }*/
+   
 
       header .header_container{
         min-width: 100%;
@@ -167,7 +160,7 @@ header{
       display: -ms-flexbox;
       display: -webkit-flex;
 
-      background: linear-gradient(to bottom right, #fcfcfc, #E8E6FD);
+      background: white;
 
       -webkit-box-shadow: 2px -21px 38px -1px rgba(0,0,0,0.45);
       -moz-box-shadow: 2px -21px 38px -1px rgba(0,0,0,0.45);
@@ -180,12 +173,13 @@ header{
         padding-left: 8%;
       }
         article#work_details h2{
-          font-size: 2.7vw;
+          font-size: 2.6vw;
       }
         article#work_details h3{
-          font-size: 1.3vw;
+          font-size: 1.2vw;
           font-weight: 100;
         }
+        
         article#work_details div.tool-list{
           width: 80%;
           padding: 10px 0;
@@ -198,9 +192,9 @@ header{
            div.tool-list h4{
             display: inline-table;
             padding: 4px;
-           border: px solid black;
+            border: px solid black;
             margin: 10px 0;
-            font-size: 1.2vw;
+            font-size: 1.1vw;
           }
 
       article#work_imgs{
@@ -208,73 +202,69 @@ header{
         padding-left: 5%;
       }
         article#work_imgs img{
-          width: 600px;
+          width: 500px;
+          padding-top: 100;
           max-width: 100%;
           display: inline-block;
-         /* border: #676767 solid px;*/
           margin-bottom: 40px;
         }
         article#work_imgs .video_container{
           max-width: 100%;
-          display: block;
+          padding-top: 30px;
           margin-bottom: 30px;
           position: relative;
-            padding-bottom: 56.25%;
-            height: 0;
-            overflow: hidden;
+          padding-bottom: 56.25%;
+          height: 0;
+          overflow: hidden;
         }
           .video_container iframe{
-            position: absolute;
-              top: 0;
-              left: 0;
-              width: 100%;
-              height: 100%;
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
           }
 
 
-    footer.project_footer{
+    section.project_links{
       background: black;
       width: 50%;
       padding: 10px 0;
       text-align: center;
     }
-      footer.project_footer a:link{
+      section.project_links a:link{
         color: black;
         text-decoration: none;
         font-size: 15px;
         font-weight: 300;
         opacity: 0.4;
       }
-      footer.project_footer a:visited{ color: black;}
-        footer.project_footer a:after{
+      article.project_links a:visited{ color: black;}
+        article.project_links a:after{
              margin-left: 10px;
              font-family: 'icomoon';
              content:' \e600';
              transition:ALL 0.5s;
         }
-        footer.project_footer a:hover:after{
+        article.project_links a:hover:after{
           margin-left: 20px;
         }
 
 
-  footer#main_footer  {
-    font-family: "Gotham", Helvetica, sans-serif;
-    text-align: center;
-    font-size: 12px;
-    background: black;
+  section#project_links {
+    font-family: "source code pro", Helvetica, sans-serif;
+    text-align: left;
+    font-size: 24px;
+    background: yellow;
     color: #4D4D4D;
     width: 100%;
   }
-    footer#main_footer p{
+    section#project_links p{
       padding: 10px 0;
     }
 
 
-
-
-
-
-  /*-----------//working list section---------------*/
+ /*-----------//working list section---------------*/
   section#section_work{
     margin:100;
     width: 100%;
@@ -367,7 +357,6 @@ header{
               color: white;
               padding: 10px 0;
       }
-
 
 
 
