--- a/css/main.css
+++ b/css/main.css
@@ -71,8 +71,8 @@
       display: flex;
       display: -webkit-box;
       display: -webkit-flex;
-      flex-flow: row wrap;
-      -webkit-flex-direction: row;
+/*      flex-flow: row wrap;
+      webkit-flex-direction: row;*/
     }
       .nav_list{
         position: fixed;
@@ -113,7 +113,7 @@
           nav#main_nav ul#nav_list a.navBlog{ color: white; }
           nav#main_nav ul#nav_list a.navWork{ color: white; }
           nav#main_nav ul#nav_list li.link a:hover{
-            color: white!important;
+          color: white!important;
           }
 /*--------- nav done ------*/
 
@@ -138,7 +138,7 @@ header{
       margin: 0 auto;
       overflow:hidden;
       z-index:-9999;
-      background: blue;
+      background: blue ;
       align-items: center;
       justify-content: center;
       vertical-align: middle;
@@ -251,7 +251,8 @@ header{
         }
 
 
-  section#project_links {
+  section#project_links{
+    
     font-family: "source code pro", Helvetica, sans-serif;
     text-align: left;
     font-size: 24px;
