css_worklist_homepage_modified

--- a/css/main.css
+++ b/css/main.css
@@ -80,24 +80,11 @@
       }
 
       nav#main_nav ul#nav_list li{
-       height: 60px;
+        height: 60px;
         width: 10%;
         text-align:center;
       }
 
-
-  /*   a#navLogo h1{
-          max-width: 40%;
-          width: 40;
-          height: 60px;
-          overflow: hidden;
-          text-indent: -99999px;
-        }*/
-     
-  /*    #navLogo h1:hover{
-            background-position: center 10px;
-        }
-*/
         nav#main_nav ul li.link{
             padding: 10px;
             font-size: 1em;
@@ -273,43 +260,38 @@ header{
   }
 
     section#section_work ul#work_list{
-    /*  padding:100;*/
       width: 100%;
-      height: 25%;
-      /*list-style: none;*/
+      height: 18%;
+      list-style: none;
       overflow: hidden;
-
       display: inline-block;
       display: -webkit-box;
       display: -ms-flexbox;
       display: -webkit-flex;
-
       -webkit-flex-flow: wrap row;
-        flex-flow: wrap row;
+      flex-flow: wrap row;
     }
       section#section_work ul#work_list li.each_work{
-        width: 18%;
-        padding:3%;
+        width: 16%;
+        margin-left:12%;
+        padding-top:3%;
         overflow: hidden;
       }
-        a.work_link{
+      a.work_link{
           width: 100%;
           display: inline-block;
           position: relative;
           overflow: hidden;
         }
-          section#section_work ul#work_list li img{
+      section#section_work ul#work_list li img{
             width: 100%;
-            height:auto;
+            height: auto;
         }
-          div.work_detail{
+      div.work_detail{
             width: 100%;
             height: 100%;
             position:relative;
             z-index: 1000;
-            font-family: "karla","sans-serif";
-            color: black;
-            text-align: right;
 
           }
             a.work_link:hover div.work_detail{
@@ -317,27 +299,27 @@ header{
             }
 
               div.work_detail p.worktitle{
+                margin-top: 0;
                 position: relative;
                 width: 100%;
-                font-size: 1.2 em;
-                font-weight: bold;
-                text-decoration: none;
+                background-color: white;
               }
            
                 div.work_detail p.worktitle span{
-                  padding: 3;
-                  text-decoration: none;
+                  font-family: "source code pro","sans-serif";
+                  color: black;
+                  font-weight: bold;
+                  text-align: left;
+                  font-size: 1.3em;
                   text-transform: uppercase;
-                  border: solid #3366ff 3px;
-                  text-decoration: none;
+                  text-decoration: none!important;
                 }
 
               div.work_detail p.worksubtitle{
-                font-size:1em;
+                 margin-top: -10px;
+                font-size:0.8em;
+                font-family: "Karla","sans-serif";
                 font-weight: lighter;
-                position: relative;
-                width: 100%;
-                opacity: 0.8;
                 text-decoration: none;
                 color: black;
               }
