home.php nav/footer_color change

--- a/css/main.css
+++ b/css/main.css
@@ -49,8 +49,9 @@
       overflow:hidden;
       width:60%;
       text-align: left;
-      font-size:1.2em;
-      font-family: 'Karla', Helvetica, sans-serif;
+      font-size:1em;
+      letter-spacing:0.07em;
+      font-family: "Karla" Helvetica, sans-serif;
      }
 
     section#about p{
@@ -88,7 +89,7 @@
         nav#main_nav ul li.link{
             padding: 10px;
             font-size: 1em;
-            font-family: "source code pro" sans-serif;
+            font-family: "Montserrat" sans-serif;
             color: white;
         }
 
@@ -332,11 +333,13 @@ header{
 
     }
       footer#main_footer p{
-              font-family: "source code pro", Helvetica, sans-serif;
+              font-family: "Montserrat", Helvetica, sans-serif;
               text-align: center;
               text-transform: uppercase;
-              font-size: 1.2em;
-              color: white;
+              letter-spacing:0.3em;
+              font-size: 1em;
+              opacity:0.9;
+              color: black;
               padding: 10px 0;
       }
 
