--- a/css/main.css
+++ b/css/main.css
@@ -65,14 +65,15 @@
   /*  //NAV// */
   nav#main_nav{
     height: 65px;
+    box-shadow: 1px 5px 6px #f1f1f1;
   }
 
     nav#main_nav ul#nav_list{
       display: flex;
- /*   display: -webkit-box;
-      display: -webkit-flex;*/
-/*    flex-flow: row wrap;
-      webkit-flex-direction: row;*/
+      display: -webkit-box;
+      display: -webkit-flex;
+      flex-flow: row wrap;
+      webkit-flex-direction: row;
     }
       .nav_list{
         position: fixed;
@@ -88,7 +89,7 @@
 
         nav#main_nav ul li.link{
             padding: 10px;
-            font-size: 1em;
+            font-size: 1.2em;
             font-family: "Montserrat" sans-serif;
             color: white;
         }
@@ -117,7 +118,7 @@
     font-family: "karla" ,Helvetica, sans-serif;
   }
 
-header{
+/*header{
       padding-top: -100px;
       position: absolute;
       top: 0;
@@ -132,16 +133,15 @@ header{
       justify-content: center;
       vertical-align: middle;
     }
-   
 
     header .header_container{
         min-width: 100%;
-      }
+      }*/
 
     section#work_content{
       width: 90%;
-      padding: 100px 5%;
-      margin: 0 auto;
+      padding: 100px 10%;
+      margin: 10 auto;
       margin-top: 0vw;
 
       display: flex;
@@ -169,22 +169,26 @@ header{
           font-weight: 100;
         }
         
-        article#work_details div.tool-list{
-          width: 80%;
-          padding: 10px 0;
-        }
-       
+    
         article#work_details p{
           font-size: 14px;
-          margin-top: 20px;
+          margin: 10px;
         }
-           div.tool-list h4{
-            display: inline-table;
-            padding: 4px;
-            border: px solid black;
-            margin: 10px 0;
-            font-size: 1.1vw;
-          }
+
+        article#toolinks{
+          padding:130px 10px;
+          margin:20px;
+/*          background-color: #e8e6fd;*/
+          font-family: "Karla",Helvetica, sans-serif;
+        }
+        div.toolinks i{
+           font-size: 1.2vw;
+        }
+           div.toolinks h4{
+            background-color: #e8e6fd;
+            display: row;
+            margin: 10px ;
+        }
 
       article#work_imgs{
         width: 100%;
@@ -214,45 +218,51 @@ header{
           height: 100%;
           }
 
+   article#project_features{
+                padding:130px 10px;
+          }
 
-    section.project_links{
-      background: black;
-      width: 50%;
-      padding: 10px 0;
-      text-align: center;
+   article#project_link{
+      padding:130px 10px;
+    /*  background: white;*/
+      width: 40%;
+      text-align: left;/*
+      font-family: "source code pro", Helvetica, sans-serif;*/
+      font-size: 18px;
+
     }
-      section.project_links a:link{
+      section.project_link a:link{
         color: black;
         text-decoration: none;
-        font-size: 15px;
-        font-weight: 300;
         opacity: 0.4;
       }
-      article.project_links a:visited{ color: black;}
-        article.project_links a:after{
+
+      article.project_link a:visited{ color:#4a3df4 ;}
+        article.project_link a:after{
              margin-left: 10px;
-             font-family: 'icomoon';
+             font-family:  "source code pro";
              content:' \e600';
              transition:ALL 0.5s;
         }
-        article.project_links a:hover:after{
+        article.project_link a:hover:after{
           margin-left: 20px;
         }
 
 
-  section#project_links{
+/*  article#project_link{
     
     font-family: "source code pro", Helvetica, sans-serif;
     text-align: left;
-    font-size: 25px;
-    background: yellow;
-    color: #4D4D4D;
+    font-size: 15px;
+    font-weight: bold;
+   
+    color: #4a3df4;
     width: 100%;
   }
-    section#project_links p{
+    article#project_link p{
       padding: 10px 0;
     }
-
+*/
 
  /*-----------//working list section---------------*/
   section#section_work{
