--- a/css/main.css
+++ b/css/main.css
@@ -19,22 +19,21 @@
 
 
   body{
-
   background: linear-gradient(to bottom right, #D6E8F2, white);
   background: -moz-linear-gradient:(to bottom right, #D6E8F2, #FFCCCC);
   font-size: 100%;
-  width:100%;
+
   }
 
   div#container{
-    width: 100%;/*
-    background:#f2f2eb;*/
+    max-width: 100%;
    background: linear-gradient( rgba(255, 204, 153, 0.25),rgba(153,204,255, 0.25));
   }
 
 
 /*landing page : home.php*/
     section#main{
+      
       border-style: solid;
       border-width: 1.4px;
       opacity: 0.8;
@@ -43,9 +42,10 @@
       background-color: white;
       box-shadow: 1px 5px 50px #99ccff;
       display: inline-block;
+
     }
     
- section#main img{
+  section#main img{
         width: 25%;
       }
 
@@ -60,48 +60,57 @@
       font-size: 1em;
       letter-spacing:0.005em;
       font-family: "Karla" Helvetica, sans-serif;
-      
       text-align: left;
     }
-
     .highlight{
-      font-weight: bolder;
+       font-weight: bolder;
     }
-    .highlight a:visited{
+
+
+    .highlight a:hover{
       font-weight: bolder;
-      font-color:#00eb98;
+      color:white!important;
+      transition: background-color,color 0.5s;
+      background-color:#ee403d;
     }
 
   /*-------//navigation//--------------*/
   /*  //NAV// */
   nav#main_nav{
-    width: 100%;
     height: 60px;
-    box-shadow: 1px 5px 6px #f1f1f1;
+    position: fixed;
   }
 
     nav#main_nav ul#nav_list{
+      height: 60px;
+      display: -moz-box;
       display: inherit;
       display: -webkit-box;
+      display: -ms-flexbox;   /* TWEENER - IE 10 */
       display: -webkit-flex;
       flex-flow: row wrap;
-      webkit-flex-direction: row;
+      -webkit-flex-direction: row;
+ 
     }
       .nav_list{
-        position: fixed;
+        width: 100%;
         z-index: 99999;
       }
 
-      nav#main_nav ul#nav_list li{
-        height: 60px;
+      nav#main_nav ul#nav_list li{  
+        flex-flow: row wrap;
         width: 15%;
+        text-align: center;
       }
 
+
       nav#main_nav ul li.link{
+            margin-left:12%;
             padding: 10px;
-            font-size: 1em;
+            font-size: 1.1em;
             font-family: "Montserrat",sans-serif;
             text-align:center;
+
         }
 
           nav#main_nav ul#nav_list li.link a{
@@ -114,6 +123,7 @@
           nav#main_nav ul#nav_list a.navWork{ color: white; }
           nav#main_nav ul#nav_list li.link a:hover{
           color: white!important;
+          transition:color 0.5s;
           }
 
 /*--------- nav done ------*/
@@ -121,11 +131,25 @@
 
 
 /*----media query---*/
+@media (max-width: 840px) and (min-width: 641px)  {
+
+
+}
+
+@media (max-width: 640px) and (min-width: 300px)  {
+  
+
+
+}
+  
+
+
 
 
 /*  //PROJECT PAGE// */
  div#project_wrapper{
-    position: inherit;
+  width:100%;
+    position:relative;
     font-family: "Merriweather" ,Helvetica, sans-serif;
     -webkit-box-shadow: 2px -21px 38px -1px rgba(0,0,0,0.45);
     -moz-box-shadow: 2px -21px 38px -1px rgba(0,0,0,0.45);
@@ -133,12 +157,13 @@
   }
 
     section#work_content{
+      width:100%;
       padding: 100px 10px;
       display: inline-block;
       display: -webkit-box;
       display: -ms-flexbox;
       display: -webkit-flex;
-      background: white;
+      background:linear-gradient( rgba(255, 204, 153, 0.25),rgba(153,204,255, 0.25));;
 
     }
 
@@ -147,7 +172,6 @@
         width: 70%;
         padding-left: 2%;
         margin-left:10%;
-    /*  padding-right:0%;*/
         text-align:justify;
 
       }
@@ -166,7 +190,7 @@
 /*------------------toolinks--------------*/
         
         article#toolinks{
-          width:20%;
+          width:30%;
           padding:80px 10px;
           margin-left:20px;
           font-family: "Karla", Helvetica, sans-serif;
@@ -179,11 +203,13 @@
           background-color: #e8e6fd;
           font-size: 1.3vw;
         }
-           div.toolinks h4{
+
+
+        div.toolinks h4{
             color:black;
             display: inherit;
             text-align: left;
-            font-size:0.8vw;
+            font-size:1vw;
         }
 
 
@@ -211,9 +237,6 @@
         text-decoration: none!important;
       }
 
-
-
-
       h1.link a:visited{ color:00eb98;}
         h1.link a:after{
              margin-left: 10px;
@@ -222,17 +245,18 @@
         }
         h1.link a:hover:after{
           margin-left: 20px;
-        }*/
+
+        }
+
 
   article#project_link{
-    
     font-family: "source code pro", Helvetica, sans-serif;
     text-align: left;
     font-size: 15px;
     font-weight: bold;
-   
     color: #4a3df4;
     width: 100%;
+
   }
     article#project_link p{
       padding: 10px 0;
@@ -240,37 +264,37 @@
 
 
 /*---------section of work imgs & videos------*/
-
 section#work_img{
         width:100%;
         background-color: white;
+
 }
       article#work_imgs{
         width: 60%;
         padding-top:5%;
         padding-left:19%;
+        display: inline-block;
+ 
 
       }
         article#work_imgs img{
-          margin-top: 3%;
+          margin-top: 10%;
           width: 80%;
           height:30%;
-          display: inline-block;
           margin-bottom:5%;
         }
 
         article#work_imgs .video_container{
           max-width: 100%;
-        /*  padding-top: 30px;*/
-          margin-bottom: 10px;
+          padding-bottom: 50%;
+          margin-bottom: 0px;
           position: relative;
-          padding-bottom: 57%;
-          height: 10;
           overflow: hidden;
-          box-shadow: 2px 21px 21px 1px rgba(0,0,0,0.45);
+
         }
           .video_container iframe{
           position: absolute;
+          border:0;
           top: 0;
           left: 0;
           width: 100%;
@@ -286,12 +310,13 @@ section#work_img{
     padding-top:2%;
     padding-left:2.5%;
     padding-bottom:4%;
-    transition: width 2s;
-
+  
   }
+
+
    #section_work a:hover{
+       transition: background,0.5s;
        background:linear-gradient( rgba(153,204,255, 0.25), rgba(255, 204, 153, 0.25));
-     
        }
 
   
@@ -334,11 +359,11 @@ section#work_img{
         }
 
       section#section_work ul#work_list li:hover img{
-              -webkit-filter: blur(1px);
-              -moz-filter: blur(1px);
-              filter: blur(1px);
-              background:linear-gradient( rgba(153,204,255, 0.25), rgba(255, 204, 153, 0.25));
-              z-index: -1;
+              -webkit-filter: blur(0.6px);
+              -moz-filter: blur(0.6px);
+              filter: blur(0.6px);
+
+              z-index: -9999;
             }
 
 
@@ -351,13 +376,14 @@ section#work_img{
             text-align: left;
           }
       
-              div.work_detail p.worktitle{
+         div.work_detail p.worktitle{
                 margin-top: 0px;
                 position: relative;
                 width: 100%;
               }
 
-                div.work_detail p.worktitle span{
+         div.work_detail p.worktitle span{
+
                   font-family: "source code pro","sans-serif";
                   color: black;
                   font-weight: bold;
@@ -367,7 +393,7 @@ section#work_img{
                   text-decoration: none!important;
                 }
 
-              div.work_detail p.worksubtitle{
+          div.work_detail p.worksubtitle{
                 margin-top: -12px;
                 font-size:0.7em;
                 font-family: "Merriweather","sans-serif";
@@ -376,6 +402,11 @@ section#work_img{
                 color: black;
               }
 
+        div.work_detail a:hover{
+        transition:color,0.5s;
+        color:linear-gradient( rgba(255, 204, 153, 0.25),rgba(153,204,255, 0.25));
+        }
+
         
  /*--------///footer///----------*/
 
@@ -383,10 +414,9 @@ section#work_img{
       width: 102.6%;
       height:100px;
       margin-top:-1.2%;
-
-
     }
-      footer#main_footer p{
+
+    footer#main_footer p{
               text-shadow: 1px 1px 2px #f1f1f1;
               font-family:"Montserrat", Helvetica, sans-serif;
               text-align: left;
